Bug 1330688 - Report a better error in the console when a module load fails r=baku r=flod